refactor: add eval.c-scale.eu project ID

--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -111,3 +111,6 @@ vos:
 - name: vo.inactive-sarscov2.eu
   auth:
     project_id: 0df0a85cfe8e47d38ce9142858845800
+- name: eval.c-scale.eu
+  auth:
+    project_id: d6283bc95d5c4296abb799596867818c
