--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -17,6 +17,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   cryoem.instruct-eric.eu:
     auth: "{{ fedcloud_sa }}"
+  crystal_channelling_simulation.vo.egi.eu:
+    auth: "{{ fedcloud_sa }}"
   d4science.org:
     auth: "{{ fedcloud_sa }}"
   datafurn.eosc-hub.eu:
