--- a/sites/CESGA-CLOUD.yaml
+++ b/sites/CESGA-CLOUD.yaml
@@ -20,3 +20,6 @@ vos:
 - name: bioisi
   auth:
     project_id: 458f3225272243d7b1c0551d3af3f130
+- name: benchmark.terradue.com
+  auth:
+    project_id: 5fe3458a96084df893200e92bdb33213
