--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -29,6 +29,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   icecube:
     auth: "{{ fedcloud_sa }}"
+  in-sar-cubes.c-scale.eu:
+    auth: "{{ fedcloud_sa }}"
   ispravision.vo.egi.eu:
     auth: "{{ fedcloud_sa }}"
   kampal.eosc-hub.eu:
