--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -15,7 +15,7 @@ vos:
   cms: "urn:mace:egi.eu:group:cms:role=vm_operator#aai.egi.eu"
   covid19.eosc-synergy.eu: "urn:mace:egi.eu:group:covid19.eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   cos4cloud-eosc.eu: "urn:mace:egi.eu:group:cos4cloud-eosc.eu:role=vm_operator#aai.egi.eu"
-  crystal_channelling_simulation.vo.egi.eu: "urn:mace:egi.eu:group:crystal_channelling_simulation.vo.egi.eu:role=vm_operator#aai.egi.eu" 
+  crystal_channelling_simulation.vo.egi.eu: "urn:mace:egi.eu:group:crystal_channelling_simulation.vo.egi.eu:role=vm_operator#aai.egi.eu"
   cryoem.instruct-eric.eu: "urn:mace:egi.eu:group:cryoem.instruct-eric.eu:role=vm_operator#aai.egi.eu"
   d4science.org: "urn:mace:egi.eu:group:d4science.org:role=vm_operator#aai.egi.eu"
   datafurn.eosc-hub.eu: "urn:mace:egi.eu:group:datafurn.eosc-hub.eu:role=vm_operator#aai.egi.eu"
@@ -58,6 +58,7 @@ vos:
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:role=vm_operator#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:role=vm_operator#aai.egi.eu"
   vo.eoscfuture-sp.panosc.eu: "urn:mace:egi.eu:group:vo.eoscfuture-sp.panosc.eu:role=vm_operator#aai.egi.eu"
+  vo.e-rihs.eu: "urn:mace:egi.eu:group:vo.e-rihs.eu:role=vm_operator#aai.egi.eu"
   vo.digitbrain.eu: "urn:mace:egi.eu:group:vo.digitbrain.eu:role=vm_operator#aai.egi.eu"
   vo.emphasisproject.eu: "urn:mace:egi.eu:group:vo.emphasisproject.eu:role=vm_operator#aai.egi.eu"
   vo.emso-eric.eu: "urn:mace:egi.eu:group:vo.emso-eric.eu:role=vm_operator#aai.egi.eu"
