--- a/sites/ILIFU-UCT.yaml
+++ b/sites/ILIFU-UCT.yaml
@@ -10,3 +10,6 @@ vos:
 - name: vo.mightee.idia.za
   auth:
     project_id: d35b3b03f8ee41e3bc1bfbf212fee346
+- name: eval.c-scale.eu
+  auth:
+    project_id: 36a68426b1a2415380ed62745bc7ba6c
