--- a/sites/GSI-LCG2.yaml
+++ b/sites/GSI-LCG2.yaml
@@ -20,3 +20,6 @@ vos:
 - name: vo.envrihub.eu
   auth:
     project_id: 09ea02290dcb4aa0b3bde9b179a45c43
+- name: vo.complex-systems.eu
+  auth:
+    project_id: 260beefcea224be6a278ccb8e89668dd
