--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -195,6 +195,7 @@ vos:
   opencoast.eosc-hub.eu:
   vo.clarin.eu:
   vo.envri-fair.eu:
+  vo.envrihub.eu:
   vo.indigo-datacloud.eu:
   vo.lifewatch.eu:
   vo.inactive-sarscov2.eu:
