--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -194,6 +194,7 @@ vos:
   drihm.eu:
   opencoast.eosc-hub.eu:
   vo.clarin.eu:
+  vo.complex-systems.eu:  
   vo.envri-fair.eu:
   vo.envrihub.eu:
   vo.indigo-datacloud.eu:
