--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -153,6 +153,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   eval.c-scale.eu:
     auth: "{{ fedcloud_sa }}"
+  gltfca.c-scale.eu:
+    auth: "{{ fedcloud_sa }}"
   hisea.c-scale.eu:
     auth: "{{ fedcloud_sa }}"
   vo.nbis.se:
