--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -31,6 +31,7 @@ vos:
   fedcloud.egi.eu: "urn:mace:egi.eu:group:fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
   fermi-lat.infn.it: "urn:mace:egi.eu:group:fermi-lat.infn.it:role=vm_operator#aai.egi.eu"
   fusion: "urn:mace:egi.eu:group:fusion:role=vm_operator#aai.egi.eu"
+  gltfca.c-scale.eu: "urn:mace:egi.eu:group:gltfca.c-scale.eu:role=member#aai.egi.eu"
   hisea.c-scale.eu: "urn:mace:egi.eu:group:hisea.c-scale.eu:role=member#aai.egi.eu"
   icecube: "urn:mace:egi.eu:group:icecube:role=vm_operator#aai.egi.eu"
   in-sar-cubes.c-scale.eu: "urn:mace:egi.eu:group:in-sar-cubes.c-scale.eu:role=member#aai.egi.eu"
