Fix mapping for inteligg

--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -78,7 +78,7 @@ vos:
   vo.i-nergy.eu: "urn:mace:egi.eu:group:vo.i-nergy.eu:role=vm_operator#aai.egi.eu"
   vo.inactive-sarscov2.eu: "urn:mace:egi.eu:group:vo.inactive-sarscov2.eu:role=vm_operator#aai.egi.eu"
   vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:role=vm_operator#aai.egi.eu"
-  vo.inteligg.com: "urn:mace:egi.eu:vo.inteligg.com:role=vm_operator#aai.egi.eu"
+  vo.inteligg.com: "urn:mace:egi.eu:group:vo.inteligg.com:role=vm_operator#aai.egi.eu"
   vo.lethe-project.eu: "urn:mace:egi.eu:group:vo.lethe-project.eu:role=vm_operator#aai.egi.eu"
   vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:role=vm_operator#aai.egi.eu"
   /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:role=vm_operator#aai.egi.eu"
