--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -36,6 +36,7 @@ vos:
   icecube: "urn:mace:egi.eu:group:icecube:role=vm_operator#aai.egi.eu"
   in-sar-cubes.c-scale.eu: "urn:mace:egi.eu:group:in-sar-cubes.c-scale.eu:role=member#aai.egi.eu"
   lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:role=member#aai.egi.eu"
+  lost-salvage.c-scale.eu: "urn:mace:egi.eu:group:lost-salvage.c-scale.eu:role=member#aai.egi.eu"
   kampal.eosc-hub.eu: "urn:mace:egi.eu:group:kampal.eosc-hub.eu:role=vm_operator#aai.egi.eu"
   med.semmelweis-univ.hu: "urn:mace:egi.eu:group:med.semmelweis-univ.hu:role=vm_operator#aai.egi.eu"
   minka-sdg.org: "urn:mace:egi.eu:group:minka-sdg.org:role=vm_operator#aai.egi.eu"
@@ -46,6 +47,7 @@ vos:
   openrisknet.org: "urn:mace:egi.eu:group:openrisknet.org:role=vm_operator#aai.egi.eu"
   ops: "urn:mace:egi.eu:group:ops:role=vm_operator#aai.egi.eu"
   peachnote.com: "urn:mace:egi.eu:group:peachnote.com:role=vm_operator#aai.egi.eu"
+  plankton.c-scale.eu: "urn:mace:egi.eu:group:plankton.c-scale.eu:role=member#aai.egi.eu"
   saps-vo.i3m.upv.es: "urn:mace:egi.eu:group:saps-vo.i3m.upv.es:role=vm_operator#aai.egi.eu"
   training.egi.eu: "urn:mace:egi.eu:group:training.egi.eu:role=vm_operator#aai.egi.eu"
   umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:role=vm_operator#aai.egi.eu"
