--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -63,6 +63,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.beamide.com:
     auth: "{{ fedcloud_sa }}"
+  vo.builtrix.tech:
+    auth: "{{ fedcloud_sa }}"
   vo.carouseldancing.org:
     auth: "{{ fedcloud_sa }}"
   vo.cite.gr:
