--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v4
         with:
-          images: egifedcloud/ops-${{ matrix.image }}
+          images: ghcr.io/EGI-Federation/fedcloud-${{ matrix.image }}
           tags: |
             type=sha
       - name: Set up QEMU
