--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,18 +27,19 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/EGI-Federation/fedcloud-${{ matrix.image }}
+          images: ghcr.io/egi-federation/fedcloud-${{ matrix.image }}
           tags: |
             type=sha
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         if: github.event_name != 'pull_request'
       - name: Build
         uses: docker/build-push-action@v4
