--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -18,6 +18,7 @@ vos:
   cos4cloud-eosc.eu: "urn:mace:egi.eu:group:cos4cloud-eosc.eu:role=vm_operator#aai.egi.eu"
   crystal_channelling_simulation.vo.egi.eu: "urn:mace:egi.eu:group:crystal_channelling_simulation.vo.egi.eu:role=vm_operator#aai.egi.eu"
   cryoem.instruct-eric.eu: "urn:mace:egi.eu:group:cryoem.instruct-eric.eu:role=vm_operator#aai.egi.eu"
+  culturalheritage.vo.egi.eu: "urn:mace:egi.eu:group:culturalheritage.vo.egi.eu:CH-cloud_operators:role=member#aai.egi.eu"  
   d4science.org: "urn:mace:egi.eu:group:d4science.org:role=vm_operator#aai.egi.eu"
   datafurn.eosc-hub.eu: "urn:mace:egi.eu:group:datafurn.eosc-hub.eu:role=vm_operator#aai.egi.eu"
   demo.fedcloud.egi.eu: "urn:mace:egi.eu:group:demo.fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
