--- a/cloud-info/Dockerfile
+++ b/cloud-info/Dockerfile
@@ -19,11 +19,11 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl -Ls \
         https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 \
         | apt-key add - \
-    && echo 'deb http://repository.egi.eu/sw/production/cas/1/current egi-igtf core' \
+    && echo 'deb https://egi-igtf.ndpf.info/distribution/egi-1.120-1b/current egi-igtf core' \
         > /etc/apt/sources.list.d/cas.list \
     && apt-get update \
     && apt-get install -y jq \
-    && (apt-get install -y ca-policy-egi-core || true) \
+    && apt-get install -y ca-policy-egi-core \
     && rm -rf /var/lib/apt/lists/* \
     && cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
 
