--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -54,6 +54,7 @@ vos:
   umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:role=vm_operator#aai.egi.eu"
   university.eosc-synergy.eu: "urn:mace:egi.eu:group:university.eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:role=vm_operator#aai.egi.eu"
+  vo.ai4eosc.eu: "urn:mace:egi.eu:group:vo.ai4eosc.eu:role=vm_operator#aai.egi.eu"
   vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:role=vm_operator#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.beamide.com: "urn:mace:egi.eu:group:vo.beamide.com:role=vm_operator#aai.egi.eu"
