--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -57,6 +57,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.access.egi.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.ai4eosc.eu:
+    auth: "{{ fedcloud_sa }}"
   vo.agiliacenter.com:
     auth: "{{ fedcloud_sa }}"
   vo.bd4nrg.eu:
