feat: improve the discovery of projects at sites
Moved everything into a python module and include testing for it,
hopefully will allow us to detect issues before deploymentt

--- a/cloud-info/Dockerfile
+++ b/cloud-info/Dockerfile
@@ -2,17 +2,11 @@ FROM python:3
 
 LABEL org.opencontainers.image.source=https://github.com/EGI-Federation/fedcloud-catchall-operations
 
-ARG CLOUD_INFO_VERSION=f6f6a2e265cc9608d791f31a8ef2903302ca33f6
-
-# hadolint ignore=DL3013
-RUN pip install --no-cache-dir \
-        "git+https://github.com/EGI-Federation/cloud-info-provider.git@$CLOUD_INFO_VERSION" \
-        "git+https://github.com/ARGOeu/argo-ams-library@devel" \
-        python-glanceclient python-novaclient python-keystoneclient keystoneauth1 yq \
-	fedcloudclient
-
-
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+RUN mkdir /cloud-info
+COPY requirements.txt /cloud-info/requirements.txt
+RUN pip install --no-cache-dir -r /cloud-info/requirements.txt
 
 # CA certificates: install and add to python
 # hadolint ignore=DL3015, DL3008
@@ -27,10 +21,13 @@ RUN curl -Ls \
     && rm -rf /var/lib/apt/lists/* \
     && cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
 
+
+COPY . /cloud-info/
+RUN pip install /cloud-info
+
 COPY ams-wrapper.sh /usr/local/bin/ams-wrapper.sh
 COPY publisher.sh /usr/local/bin/publisher.sh
 COPY openstack.rc /etc/cloud-info-provider/openstack.rc
 COPY openstack.yaml /etc/cloud-info-provider/openstack.yaml
-COPY config_generator.py /usr/local/bin/config_generator.py
 
 CMD ["publisher.sh"]
