--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -126,3 +126,6 @@ vos:
 - name: vo.enes.org
   auth:
     project_id: 786566209a7444f89a561172fa28e117
+- name: vo.envrihub.eu
+  auth:
+    project_id: 61d8e5a65aff45fabc41ae954e905d11
