Add vo.binare-oy.eu mapping

--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -58,6 +58,7 @@ vos:
   vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:role=vm_operator#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.beamide.com: "urn:mace:egi.eu:group:vo.beamide.com:role=vm_operator#aai.egi.eu"
+  vo.binare-oy.eu: "urn:mace:egi.eu:group:vo.binare-oy.eu:role=vm_operator#aai.egi.eu"
   vo.builtrix.tech: "urn:mace:egi.eu:group:vo.builtrix.tech:role=vm_operator#aai.egi.eu"
   vo.carouseldancing.org: "urn:mace:egi.eu:group:vo.carouseldancing.org:role=vm_operator#aai.egi.eu"
   vo.cite.gr: "urn:mace:egi.eu:group:vo.cite.gr:role=vm_operator#aai.egi.eu"
